fix spacing and size of action items

--- a/ui/css/afsa-style.css
+++ b/ui/css/afsa-style.css
@@ -83,23 +83,22 @@ strong {
     display: flex;
     justify-content: space-evenly;
     column-gap: 1em;
-    margin-top: 1em;
+    margin-top: 2em;
 }
 
 .action-item {
-    padding: 16px 16px 16px 75px;
+    padding: 1em;
     background: #ffffff;
     margin-bottom: 1em;
-    width: 40%;
     border-bottom: 8px solid rgba(0,170,184,0.3);
     display: block;
     text-decoration: none;
     position: relative;
-    min-height: 90px;
     border-top: 1px solid #d8e1e9;
     border-left: 1px solid #d8e1e9;
     border-right: 1px solid #d8e1e9;
     border-radius: 4px 4px 0 0;
+    text-align: center;
     
 }
 
